# notify-pr-comments-to-slack

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
lambda/: fixtures.py  git_body_for_slack.py  lambda_function.py  settings.py  slack.py  validate.py
src/: git_body_for_slack.py  lambda_function.py  settings.py  slack.py  validate.py
tests/: git_body_for_slack_test.py  settings_test.py  slack_test.py
